--- a/_posts/2021-06-22-template.markdown
+++ b/_posts/2021-06-22-template.markdown
@@ -18,7 +18,7 @@ for $$n > 69$$.
 
 # Images
 
-![](/jblog/assets/images/pepega.png){:width="320"} ![](/jblog/assets/images/tenor.gif)
+![](/jblog/assets/images/pepega.png){:width="320"} ![](/jblog/assets/images/tenor (9).gif)
 
 # Videos
 
