--- a/_posts/2021-06-22-troll-1.markdown
+++ b/_posts/2021-06-22-troll-1.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "The Troll"
-date:   22/06/2021 02:06:09 CEST
+date:   22/06/2021 03:06:09 +0200
 categories: test
 ---
 
