--- a/_posts/2021-06-22-template.markdown
+++ b/_posts/2021-06-22-template.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Template for Everything"
-date:   22/06/2021 02:06:09 CEST
+date:   22/06/2021 02:06:09 +0200
 categories: test
 ---
 # Text
