--- a/_posts/2021-06-22-template.markdown
+++ b/_posts/2021-06-22-template.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Template for Everything"
 date:   2021-06-22 02:06:09 +0200
-categories: test
+categories: template
 ---
 # Text
 Hello World.
